Bump org.awaitility:awaitility from 3.1.6 to 4.2.2
Bumps [org.awaitility:awaitility](https://github.com/awaitility/awaitility) from 3.1.6 to 4.2.2.
- [Changelog](https://github.com/awaitility/awaitility/blob/master/changelog.txt)
- [Commits](https://github.com/awaitility/awaitility/compare/awaitility-3.1.6...awaitility-4.2.2)

---
updated-dependencies:
- dependency-name: org.awaitility:awaitility
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>